UX: minor ux/ui fixes
- hide back to list when chat is collapsed
- translate chat.return_to_list
- adds ellipsis when channel name is too long

--- a/assets/stylesheets/drawer.scss
+++ b/assets/stylesheets/drawer.scss
@@ -9,7 +9,7 @@ $header-height: 2.5rem;
   border: 2px solid var(--primary-very-low);
 }
 
-.header-dropdown-toggle.open-chat  {
+.header-dropdown-toggle.open-chat {
   .unread-chat-messages-indicator {
     position: absolute;
     right: 4px;
@@ -89,7 +89,7 @@ $header-height: 2.5rem;
     overflow-x: hidden;
     color: var(--primary);
     .chat-channel-title {
-      display: inline-flex;
+      display: flex;
 
       .d-icon:not(.d-icon-hashtag) {
         color: var(--primary-high);
@@ -448,7 +448,6 @@ $header-height: 2.5rem;
     font-size: var(--font-down-1);
     color: $primary-high;
   }
-
 }
 
 .chat-channel-title {
@@ -463,6 +462,7 @@ $header-height: 2.5rem;
   .chat-name {
     margin: 0 0 0 0.25em;
     font-weight: 500;
+    @include ellipsis;
   }
   .topic-chat-icon {
     color: var(--primary-medium);
